--- a/app/views/abes/who.html
+++ b/app/views/abes/who.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ABES - Who We Are</title>
+    <title >ABES - Who We Are</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
    
     <div class="employees">
         <div class="container">
-            <h1>Who We Are</h1>
+            <h1 style='text-align:center'>Who We Are</h1>
             <h2>Bill Stewart - Co-Founder/Inventor</h2>
             <p>Co-founder of ABES, Mr. Stewart is the technical part of the team and original inventor of the ABES anaerobic digestion system. His multidisciplinary background in the basic and applied biological, chemical and environmental sciences with over 30 years’ experience in successfully developing new and disruptive high-rate biotechnologies for environmental protection, energy production and recycling work has resulted in formation of three previous companies currently marketing products he originally developed. Bill has been the recipient of the Consulting Engineers Council of Oregon’s Grand Award for Studies & Research, the American Consulting Engineers Council’s National Engineering Grand Award for Excellence in Studies & Research, Honor Award from the Consulting Engineers Council of Oregon, and Recycling Award from Portland (OR) Metro. He holds five patents granted with two additional pending. Bill has a B.S. in Biology from Niagara University, an M.S. in Biology from Florida State University, and a Ph.D. in Biology from the University of California at Santa Barbara.</p>
             <hr>
