--- a/app/views/abes/home.html
+++ b/app/views/abes/home.html
@@ -30,9 +30,6 @@
                         <a href="/">Home</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/abes/who">Who We Are</a>
-                    </li>
-                    <li class="page-scroll">
                         <a href="abes/what">What We Do</a>
                     </li>
                     <li class="page-scroll">
@@ -40,6 +37,9 @@
                     </li>
                     <li class="page-scroll">
                         <a href="abes/current_status">Current Status</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="/abes/who">Who We Are</a>
                     </li>
                     <li class="page-scroll">
                         <a href="abes/news">News</a>
@@ -55,19 +55,39 @@
     </nav>
     
     <div class="header">
-        <div class="header-content">
+
+        <div class="header-content" style='margin-top:-70px;'>
             <img src="http://imgur.com/r2lx3Sy.png" class="img-responsive" style="margin: 0 auto;">
             <h3 class="typed"></h3>
         </div>
+
+        <div style="margin-top:40px; text-align:center; font-weight:bold;color:black">
+            "ABES brings Anaerobic Technology into the 21st century ie; 
+            <br>dramatic improvements in efficiency, <br>profitability with a positive impact to the environment."<br>
+            - John Wasden    
+        </div>
+
+        <div style='text-align:center;margin-top:20px;'>
+            <%= link_to "#Bill", class: "btn btn-default", id: "arrow" do %>
+              <i class="fa fa-arrow-circle-down"></i>
+            <% end %>
+
+        </div>
     </div>
+    <div id="section2">
 
-
-
-
+        <div style=' text-align:center; padding-top:250px; font-weight:bold;color:black'>
+        
+        “The ABES system will dramatically alter the organic waste processing
+industry from one requiring public subsidies for operation, <br>to an industry that 
+provides a very attractive revenue stream from the production of renewable 
+energy.”<br> -Dr Bill Stewart, Founder, CTO ABES
+    </div>
+<div id="Bill" style="margin-top:300px;visibility:hidden">here</div>
             
 
     
-   
+   </div>
     
 </body>
 
