--- a/app/views/abes/news.html
+++ b/app/views/abes/news.html
@@ -3,10 +3,10 @@
 
 
 <body>
-    
     <div>
       <iframe style="width: 100%; height: 800px; margin-top: 4px;"src="http://americanbiogascouncil.org"></iframe>
     </div>
+    <p style='text-align:center;'>*The American Biogas Council is a great source of information on the Biogas industry, they are not associated with or endorse ABES<p>
 
 
 
