--- a/app/views/abes/what.html
+++ b/app/views/abes/what.html
@@ -5,31 +5,89 @@
     
     <div class="employees">
         <div class="container">
-            <h1>What We Do</h1>
-            <p>- Traditional systems focus on neutralizing waste; the ABES next generation system is designed for energy creation.</p>
-            <p>Conventional single stage AD digesters implement established technology and have a large installed base, particularly at wastewater treatment facilities. Until recently, the primary design goals of conventional AD systems at waste water treatment facilities have been organic waste volume reduction and biological stabilization—not renewable energy production. Single stage digesters do not provide sufficient energy yields and potential investment return to make AD a meaningful participant in the future repertoire of renewable energy technology.
-            <p>The ABES system can be described as a threestage, multiphase system. The system mimics the advanced and highly efficient multistage digestive systems found in more advanced animals, including insects. Note that Stage I can be a retrofitted conventional digester in a municipal waste water setting. Stages II and III are bolted on to enable the separation of microbial populations necessary to achieve the improved energy outputs contemplated in the ABES design approach.</p>
-            <hr>
-            <p>- Creates 6 to 8 times the gross revenue through energy creation while costing no more.</p>
-            <p>The ABES design approach emphasizes, among other things, the establishment of synergistic production, a characteristic of complex biological systems in which the whole is greater than the sum of its parts. Examples of the additive effects of synergy are to be found in all living things, including complex microbial ecosystems. By integrating the engineering and basic biochemical features of conventional AD system designs with advanced biological systems concepts, the ABES design will dramatically improve process operation and performance through establishment of a stable, synergistic and more highly productive ecosystem. The effect of this synergy is a gross revenue increase of up to 8 times while keeping costs in line with traditional AD systems.</p>
-            <hr>
-            <p>- Is engineered and ready to be deployed.</p>
-            <p>The ABES system has not only been designed from an engineering perspective but also from a systems biology perspective thereby taking every detail into account. Here are some of the details as addressed by the respective disciplines.</p>
-            <p><b>ENGINEERING:</b></p>
-            <p>Tank Design, Hydraulic Design, Mechanical Process Design, Gas Transfer, Pumps/Piping/Appurtenances, Process Control Systems, Life Cycle Analysis, Process Safety, Construction Management, Operational Flexibility, Mathematical Modeling, Operational Validation</p>
-            <p><b>BIOLOGY:</b></p>
-            <p>Microbial Process Biochemistry, Microbial Ecosystem Design, Food Chain Structure, Biological Energy Flow, Feedstock Adaptability, Synergistic Effects, Product Inhibition, Competition Effects, Biological Stability, Biofilm Development, Start-Up, Energy Output Optimization</p>
-            <p>Looking at the ABES system from every angle and employing only proven technology assures that it'll be up and running efficiently right from the start.</p>
-            <hr>
-            <p>- Breaks down cellulosic material, reducing solids by at least 80%.</p>
-            <p>Stage I operates at an acidic pH thereby suppresing methane production until Stage III which promotes more effective hydrolysis. Increased Hydroloysis rates allow for higher rates of feedstock throughput and higher rates of soluble and gaseous food production for the methanogens in Stage III.(Note that higher mixing rates in single stage digesters tend to reduce methane production due to shear forces.) This increase in hydrolysis allows for the increase breakdown of cellulosic material and reduction of solids by at least 80%.</p>
-            <hr>
-            <p>- Makes cogeneration smooth and flexible, easily moving from digesting one product to another without straining the system.</p>
-            <p>The methane suppression in Stage I greatly reduces the concern for cessation of energy production caused by the presence of toxins in the feedstock, ensuring greater reliability of energy production. This reduction in toxins also allows for the addition of mixed feedstocks (e.g., the addition of fats, food wastes and manures) become realistic options for operators to further increase gas production. The addition of fats and oils alone has been shown to almost double methane production. In the ABES system, an operator does not need to carefully balance the requirements of the methanogen populations when considering alternative feedstocks (as must be done in single stage systems).</p>
-            <hr>
-            <p>- Can be installed completely new or as an upgrade to an existing system.</p>
-            <p>The Stage I reactor in the ABES system is a tank of equivalent size to a conventional single stage digestor and ABES is able to easily upgrade a current AD system by utlizing the conventional single stage digestor already in place. The Stage II and Stage III digestors are both only 1/10 of the size of the Stage I tank and can be quickly tied into at an existing site or all three tanks can be installed to create a brand new ABES three stage AD system.</p>
-            <hr>
+            <h1 style="text-align:center">What We Do</h1>
+                <img style="float:right; width:50%; margin:10px; margin-bottom:-10px;", src="http://myriadpower.com/images13/complete4.jpg")>
+                <p>
+                    ABES has developed and patented an innovative biotechnological solution
+                    that significantly increases the production of renewable methane gas from the tried
+                    and proven anaerobic digestion process. 
+                </P>
+                <p>
+                    The ABES three-stage anaerobic digestion system increases the allowable 
+                    
+                    flow throughput of the biological process, significantly reduces inhibition effects, 
+                    
+                    and isolates and optimizes environmental conditions of the methane producing 
+                    
+                    microbial populations in the final stage of the system. <b>It operates by the addition 
+                    
+                    of two smaller reaction tanks (ABES Stages II and III) connected in series to 
+                    
+                    the original primary anaerobic digester, which functions as Stage I of the 
+                    
+                    ABES system. ABES Stage II, operated as an upflow flocculent sludge bed 
+                    
+                    digester, completes hydrolysis, hydrogen gas production and removal of 
+                    
+                    suspended solids, while ABES Stage III, an upflow packed bed rector using the 
+                    
+                    ABES patent pending biofilm attachment media, is optimized to significantly 
+                    
+                    increase production levels of clean renewable methane gas.</b>
+                </p>
+                <p>
+                    The benefits of this approach include:
+                    <p>
+                        1. <b>Throughput processing time is reduced</b> from 21 to 7-8 days, reducing 
+                        
+                        tankage requirements and capital costs, while increasing methane 
+                        
+                        production.
+                    </p>
+                    <p>
+                        2. The <b>capital cost per unit of throughput is half</b> that of a single stage 
+                        
+                        anaerobic digestion system. ABES’s increase in efficiency and biogas 
+                        
+                        production directly translates to three times greater revenue potential as 
+                        
+                        compared to a conventional system.
+                    </p>
+                    <p>
+                        3. Residual <b>non-digestible solids are reduced by up to 80 percent,</b> 
+                        
+                        increasing methane production while further reducing operational costs and 
+                        
+                        residue disposal requirements.
+                    </p>
+                    <p>
+                        4. The ABES system permits <b>easy adaptation of co-digestion</b> of additional 
+                        
+                        organic waste streams including food wastes, green wastes, fats, oils and greases 
+                        
+                        and animal production manures with wastewater sludge. Incorporation of 
+                        
+                        mixed organics in this way can further increase renewable energy output by an 
+                        additional 5 to 6 times that produced in standard digesters. 
+                    </p>
+                    The <b>market</b> for the ABES system is already available and waiting for this 
+                    highly efficient and cost effective anaerobic digestion system. The ABES system 
+                    can be quickly and cost effectively retrofitted to the thousands of single stage 
+                    anaerobic digesters currently operational at both municipal and industrial 
+                    wastewater treatment plants worldwide. It can also be installed independently 
+                    at the 1,200 dairies and 1,400 other animal production farms in the United 
+
+                    States which have been identified by the EPA as candidates for this type of 
+                    technology.
+                </p>
+                </p>
+                    ABES will license the technology to dealers worldwide and also provide 
+                    ongoing contractual support to meet these opportunities.
+                    The ABES system creates a new worldwide industry. Owners will see an 
+                    attractive income stream, investors will have to opportunity for returns on a 
+                    very profitable business, and the environment will benefit from a reliable source 
+                    of clean, carbon-neutral renewable energy.
+                </p>
         </div>
     </div>  
     </div>
