--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -6,4 +6,10 @@
   <p>Please fill out the form below and we'll get back to you as soon as possible.</p>
 
   <%= render 'form', :inquiry => @inquiry %>
+  <hr>
+  <h1>or</h1>
+  <h3>Send an email to Tyler Wasden</h3>
+  <h3>at info4abes@gmail.com</h3>
+  <br>
+  <br>
 </div>
