--- a/app/assets/stylesheets/abes.css.scss
+++ b/app/assets/stylesheets/abes.css.scss
@@ -8,10 +8,17 @@ html, body {
 }
 
 
-h1, h2, h3, h4, p {
+h1, h2, h3, p {
     font-family: 'lato';
     font-weight: 400;
 }
+
+h4 {
+    font-family: 'lato';
+    font-weight: lighter;
+}
+
+
 
 
 .header {
