--- a/app/assets/stylesheets/abes.css.scss
+++ b/app/assets/stylesheets/abes.css.scss
@@ -166,7 +166,7 @@ pre{
 #section2 {
   background: url(http://followgreenliving.com/wp-content/uploads/2014/07/panel_de_biogas.jpg);
   background-repeat: no-repeat;
-  background-width: 100%; 
+  background-size: cover; 
   height: auto;
 
 }
