put quotes on same section

--- a/app/views/abes/home.html
+++ b/app/views/abes/home.html
@@ -56,36 +56,23 @@
     
     <div class="header">
 
-        <div class="header-content" style='margin-top:-70px;'>
-            <img src="http://imgur.com/r2lx3Sy.png" class="img-responsive" style="margin: 0 auto;">
-            <h3 class="typed"></h3>
+        <div style="margin-top:-45px; text-align:center; font-weight:bold;color:black">
+          "ABES brings Anaerobic Technology into the 21st century ie; 
+          <br>dramatic improvements in efficiency, <br>profitability with a positive impact to the environment."<br>
+          - John Wasden, Founder, CEO ABES
         </div>
 
-        <div style="margin-top:40px; text-align:center; font-weight:bold;color:black">
-            "ABES brings Anaerobic Technology into the 21st century ie; 
-            <br>dramatic improvements in efficiency, <br>profitability with a positive impact to the environment."<br>
-            - John Wasden    
+        <div class="header-content" >
+          <img src="http://imgur.com/r2lx3Sy.png" class="img-responsive" style="margin: 0 auto;">
+          <h3 class="typed"></h3>
         </div>
 
-        <div style='text-align:center;margin-top:20px;'>
-            <%= link_to "#Bill", class: "btn btn-default", id: "arrow" do %>
-              <i class="fa fa-arrow-circle-down"></i>
-            <% end %>
-
-        </div>
-    </div>
-    <div id="section2">
-
-        <div style=' text-align:center; padding-top:180px; font-weight:bold;color:black'>
-        
+      <div style="text-align:center; margin-top: 30px; font-weight:bold;color:black; text-shadow: 1px 1px black; color: white;">  
         “The ABES system will dramatically alter the organic waste processing
-industry from one requiring public subsidies for operation, <br>to an industry that 
-provides a very attractive revenue stream from the production of renewable 
-energy.”<br> -Dr Bill Stewart, Founder, CTO ABES
-    </div>
-<div id="Bill" style="margin-top:300px;visibility:hidden">here</div>
-            
-
+        industry from one requiring public subsidies for operation, <br>to an industry that 
+        provides a very attractive revenue stream from the production of renewable 
+        energy.”<br> -Dr Bill Stewart, Founder, CTO ABES
+      </div>
     
    </div>
     
