--- a/app/views/abes/home.html
+++ b/app/views/abes/home.html
@@ -56,7 +56,7 @@
     
     <div class="header">
 
-        <div style="margin-top:-95px;  margin-left: auto; margin-right: auto;  width:500px; border-radius: 10px; text-align:center; padding-top: 10px; padding-bottom: 10px; font-weight:bold;color:black;background: rgba(255,255,255,0.3)">
+        <div style="margin-top:-95px;  margin-left: auto; margin-right: auto;  max-width:500px; border-radius: 10px; text-align:center; padding-top: 10px; padding-bottom: 10px; font-weight:bold;color:black;background: rgba(255,255,255,0.3)">
           "ABES brings Anaerobic Technology into the 21st century ie; 
           <br>dramatic improvements in efficiency, <br>profitability with a positive impact to the environment."<br>
           - John Wasden, Founder, CEO ABES
@@ -67,7 +67,7 @@
           <h3 class="typed"></h3>
         </div>
 
-      <div style="text-align:center;padding-top: 10px; padding-bottom: 10px; margin-left: auto; margin-right: auto; width: 700px; margin-top: 30px; border-radius: 10px; font-weight:bold;color:black; background: rgba(255,255,255,0.5);">  
+      <div style="text-align:center;padding-top: 10px; padding-bottom: 10px; margin-left: auto; margin-right: auto; max-width: 700px; margin-top: 30px; border-radius: 10px; font-weight:bold;color:black; background: rgba(255,255,255,0.5);">  
         “The ABES system will dramatically alter the organic waste processing
         industry from one requiring public subsidies for operation, <br>to an industry that 
         provides a very attractive revenue stream from the production of renewable 
