made title dynamic

--- a/app/views/abes/home.html
+++ b/app/views/abes/home.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ABES - Anaerobic Digestion For The Future</title>
+    <title>se&#241;or</title>
 
 
 </head>
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="page-scroll">
-                        <a href="/">Home</a>
+                        <a href="/">se&#241;or</a>
                     </li>
                     <li class="page-scroll">
                         <a href="abes/what">What We Do</a>
