--- a/app/views/abes/home.html
+++ b/app/views/abes/home.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="page-scroll">
-                        <a href="/">home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li class="page-scroll">
                         <a href="abes/what">What We Do</a>
