--- a/app/views/abes/current_status.html
+++ b/app/views/abes/current_status.html
@@ -10,7 +10,7 @@
             <hr>
             <img style="float:right; width:75%; margin:10px;", src="http://i273.photobucket.com/albums/jj216/angie__xoxo__22/photography/green-banner.jpg")>
             <h3>
-              ABES has designed a patent pending anaerobic digestion system combining proven technogologies creating a disruptive technology. ABES is structured with a board of directors with expertise and success in both the start up world as well as the renewable energy field and has put together a highly qualified management team.  ABES has established relationships with strategic partners and key suppliers.  Right now ABES is looking to raise $5,000,000 for the inaugural project at an active waste water facility. ABES is currently assessing how to proceed in that endeavor.
+              ABES has designed a patent pending anaerobic digestion system combining proven technogologies creating a disruptive technology. ABES is structured with a board of directors with expertise and success in both the start up world as well as the renewable energy field and has put together a highly qualified management team.  ABES has established relationships with strategic partners and key suppliers.  Right now ABES is looking to raise $5,000,000 for the inaugural project at an active waste water facility. ABES is currently actively fund raising through our EquityNet website (site the website), and through private funders.
            
             </h3>
         </div>
