--- a/app/views/abes/who.html
+++ b/app/views/abes/who.html
@@ -35,7 +35,7 @@
             <h2>John Wasden - Co-Founder</h2>
             <p>Mr. Wasden along with Bill Stewart is co-founder of ABES. John has over 30 years’ experience as a successful business creator and manager, including extensive experience in sales, marketing and technical operations. Beginning with a $7,000 personal investment, John founded Western Electronics in Nampa, Idaho, which he built into a $20 million per year operation with up to 18 percent profit margin. After selling Western Electronics, John became involved in a venture capital group wherein he was charged with locating and assessing early stage new technology investment opportunities. This resulted in five investments over a one and a half year period, three of which are still in business ten years later. Bill and John met at the time when John’s group invested in a company Bill had earlier founded. John currently works with one of these startups, Wavetronix, LLC, which manufactures advanced radar-based traffic control devices, and is experiencing double digit annual growth. He has been instrumental in lobbying for the company in Washington, DC, in general business and management strategic analysis and support, and currently concentrates on recruiting and supporting new staff as they integrate into this rapidly growing and profitable company. John has served as board member for four companies. He has also taught financial and production management and decision-making metrics at the university level. He holds a B.A. in Economics from Brigham Young University and a M.S. in Management from the University of Utah.</p>
             <hr>
-            <h2>Teri Cohan Link - President of Linkco & Environmental Funds LLC</h2>
+            <h2>Teri Cohan Link - Partner of Integrated Resources Unlimited</h2>
             <p>Ms. Teri Cohan Link serves as President of LINKCO Inc and as co-managing partner 
             at Integrated Resources Unlimited LLC.  She provides in-depth expertise in business 
             development, management, and operations.  Her broad knowledge in contracting 
@@ -50,8 +50,8 @@
             engineering firms, EPC’s, equipment vendors and fabricators and legal council.  Ms. 
             Cohan Link has served for many years on the Board of Directors of the Southern CA 
             Waste Management Forum where she currently holds the position of President.  Her 
-            Bachelor of Arts degree is from UCLA. She holds a Masters degree from The Hebrew 
-            University in Jerusalem, and a Masters of Business Administration from Pepperdine 
+            Masters of Arts degree is from UCLA. She holds a Masters degree from The Hebrew 
+            University in Jerusalem, and a Business Administration Degree from Pepperdine 
             University.</p>
             <hr>
             <h2>Tal C. Finney - Partner of Law Firm Dongell Lawrence Finney, LLP</h2>
