--- a/app/views/abes/who.html
+++ b/app/views/abes/who.html
@@ -49,10 +49,10 @@
             with funders, end-users, government agencies, community groups and stakeholders, 
             engineering firms, EPC’s, equipment vendors and fabricators and legal council.  Ms. 
             Cohan Link has served for many years on the Board of Directors of the Southern CA 
-            Waste Management Forum where she currently holds the position of President.  Her 
-            Masters of Arts degree is from UCLA. She holds a Masters degree from The Hebrew 
-            University in Jerusalem, and a Business Administration Degree from Pepperdine 
-            University.</p>
+            Waste Management Forum where she currently holds the position of President. Her Bachelor 
+            of Arts degree is from University of California Los Angeles.  She holds a Masters of Arts 
+            degree from the Hebrew University in Jerusalem and earned her Masters in Business 
+            Management degree from Pepperdine University.</p>
             <hr>
             <h2>Tal C. Finney - Partner of Law Firm Dongell Lawrence Finney, LLP</h2>
             <p>Mr. Finney is a partner in the law firm Dongell Lawrence Finney, LLP, Los Angeles, CA. In addition to his law degree from Loyola Law School, Tal also holds a diploma in international trade, finance, and business law awarded in 1989 at I.S.S.E.C. in Paris, France. His practice areas include business litigation, corporate and financing transactions, government regulatory enforcement and compliance, land use and development, construction law, energy, entertainment, nonprofit corporate transactions and compliance, and professional malpractice. Tal Previously spent eight years at the highest appointed levels in California state government, including the position of Senior Advisor and Director of Policy to the Governor of California, resulting in substantial development in his government regulatory and political expertise.  He has been named a Super Lawyer for three consecutive years in the areas of environmental, government, and energy law and was recently distinguished as such in the Super Lawyers Corporate Counsel Edition for Energy and Natural Resources.</p>
