--- a/app/views/abes/power_point.html.erb
+++ b/app/views/abes/power_point.html.erb
@@ -13,7 +13,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="0" class=""></li>
         <% x = 1 %>
 
         <% while x <= 14 do %>
