--- a/app/views/abes/home.html
+++ b/app/views/abes/home.html
@@ -23,7 +23,7 @@
             </div>
 
             <!-- desktop navbar -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse" id="desktop" >
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse"  >
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="page-scroll">
@@ -49,35 +49,6 @@
                     </li>
                 </ul>
             </div>
-
-            <!-- collapsed navbar-->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-inverse" id='phone' >
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="page-scroll">
-                        <a href="/">Home</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="abes/what">What We Do</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="abes/power_point">How We Do It</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="abes/current_status">Current Status</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="/abes/who">Who We Are</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="abes/news">News</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="inquiries/new">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
