playing with navbar2

--- a/app/assets/stylesheets/abes.css.scss
+++ b/app/assets/stylesheets/abes.css.scss
@@ -168,9 +168,9 @@ pre{
 
 @media(max-width:767px) {
   .navbar-collapse {
-    background-color: black;
+    background: black;
   }
-  .navbar-collapse li {
+  .navbar-collapse li a {
     color: white;
   }
 }
