--- a/app/assets/stylesheets/abes.css.scss
+++ b/app/assets/stylesheets/abes.css.scss
@@ -148,7 +148,7 @@ pre{
     outline: 0;
 }
 
-@media(min-width:767px) {
+@media handheld, screen and (min-width:767px) {
     .navbar {
         padding: 20px 0;
         border-bottom: 0;
@@ -166,7 +166,7 @@ pre{
 
 }
 
-@media(max-width:767px) {
+@media handheld, screen and (max-width:767px) {
   .navbar-collapse {
     background: black;
   }
