--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -8,8 +8,8 @@
   <%= render 'form', :inquiry => @inquiry %>
   <hr>
   <h1>or</h1>
-  <h3>Send an email to Tyler Wasden</h3>
-  <h3>at info4abes@gmail.com</h3>
+  <h3>Send an email to John Wasden</h3>
+  <h3>at abes4info@gmail.com</h3>
   <br>
   <br>
 </div>
