--- a/app/views/abes/current_status.html
+++ b/app/views/abes/current_status.html
@@ -8,10 +8,12 @@
     <div class="container">
         <div style="margin-bottom:50px;">
             <hr>
-            <img style="float:right; width:75%; margin:10px;", src="http://i273.photobucket.com/albums/jj216/angie__xoxo__22/photography/green-banner.jpg")>
-            <h3>
-              ABES has designed a patent pending anaerobic digestion system combining proven technogologies creating a disruptive technology. ABES is structured with a board of directors with expertise and success in both the start up world as well as the renewable energy field and has put together a highly qualified management team.  ABES has established relationships with strategic partners and key suppliers.  Right now ABES is currently actively fund raising $5,000,000 for the inaugural project at an active waste water facility through our EquityNet website (**website citation here**), and through private funders.
-            </h3>
+            <img style="width:75%; margin-left: 150px;
+    margin-right: auto;", src="http://i273.photobucket.com/albums/jj216/angie__xoxo__22/photography/green-banner.jpg")>
+            <h1 style='text-align:center'>
+              ABES has designed a patent pending anaerobic digestion system combining proven technogologies creating a disruptive technology.
+              <!-- . ABES is structured with a board of directors with expertise and success in both the start up world as well as the renewable energy field and has put together a highly qualified management team.  ABES has established relationships with strategic partners and key suppliers.  Right now ABES is currently actively fund raising $5,000,000 for the inaugural project at an active waste water facility through our EquityNet website (**website citation here**), and through private funders. -->
+            </h1>
         </div>
     </div>
     
